<resources>
    <string name="app_name">Password Manager</string>
    <string name="title_home">Passwords</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="home_fab_add_password">Add password</string>
    <string name="hidden_password">*********</string>
    <string name="website_address">Website address</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Fingerprint">Fingerprint</string>
    <string name="password_must_contain_more_than_5_characters">Password must contain more than 5 characters</string>
    <string name="no_passwords">No passwords have been stored. Please utilize the \'Add\' button located at the bottom of the screen.</string>
    <string name="your_login">Your login</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password_symbols_warning">Password should contain more than 5 characters</string>
    <string name="create_password">Create password</string>
    <string name="master_password">Master Password</string>
    <string name="save">Save</string>
    <string name="enable_fingerprint">Enable fingerprint</string>
    <string name="your_password">Your password</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>