<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.passwordpage.PasswordModalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <EditText
            android:id="@+id/password_modal_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/website_address"
            android:importantForAutofill="no"
            android:inputType="none"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/password_modal_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="emailAddress"
            android:hint="@string/your_login"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/password_modal_website"
            tools:ignore="TextFields" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/password_modal_password_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/password_modal_login">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_modal_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/password_modal_random"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password_modal_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:autofillHints="password"
                    android:background="@color/white"
                    android:hint="@string/your_password"
                    android:importantForAutofill="yes"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/password_modal_random"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:src="@drawable/ic_random"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/password_modal_password_layout"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>